working integration between api and db service. fixed docker ref

--- a/rhema_search/src/Dockerfile
+++ b/rhema_search/src/Dockerfile
@@ -1,5 +1,14 @@
 FROM python:3.10.6-alpine3.16
 
+# Add environment variables
+ENV PYTHONUNBUFFERED=1
+
+ARG api_key
+ENV OPENAI_API_KEY=$api_key
+
+ARG db_fqdn_url
+ENV DB_FQDN=$db_fqdn_url
+
 WORKDIR /src
 
 COPY requirements.txt .
