--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.0.2",
     "@radix-ui/react-select": "^1.2.0",
-    "@radix-ui/react-separator": "^1.0.1",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.2",
@@ -45,14 +45,14 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.1.21",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0-alpha.4",
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
-    "tailwind-merge": "^1.8.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
